--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
 h1 {
-    color: blue;
+    background-color: grey;
+    color: white;
+    text-align: center;
 }
+
 body {
+    font-family: fantasy;
     color: black;
 }
+
+button {
+    border: 1px solid black;
+    background-color: rgb(173, 175, 177);
+}
+
+input {
+    border: 1px solid black;
+}
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+  tr:hover {
+    background-color: #f5f5f5;
+  }
+  tr:nth-child(even) {
+      background-color: #f2f2f2;
+  }
