--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ h1 {
 }
 
 body {
-    font-family: fantasy;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     color: black;
+    border: 1px solid black;
+    padding: 10px;
 }
 
 button {
     border: 1px solid black;
     background-color: rgb(173, 175, 177);
+    border-radius: 10px;
 }
 
 input {
@@ -20,7 +23,13 @@ input {
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
+    
   }
+
+  table {
+    width:100%;
+  }
+
 
   tr:hover {
     background-color: #f5f5f5;
